# rocGRAPH

./: .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  REUSE.toml  install.sh
.github/: CODEOWNERS  CONTRIBUTING.md  pull_request_template.md
clients/: CMakeLists.txt
clients/common/: rocgraph_clients_are_eq.cpp  rocgraph_clients_are_gt.cpp  rocgraph_clients_are_le.cpp  rocgraph_clients_are_lt.cpp  rocgraph_clients_are_near_tolerance.cpp  rocgraph_clients_assert.hpp  rocgraph_clients_create_test_graph.cpp  rocgraph_clients_data_type_id_get.cpp  rocgraph_clients_envariables.cpp  rocgraph_clients_expect_array_eq.cpp  rocgraph_clients_expect_array_near_tolerance.cpp  rocgraph_clients_expect_eq.cpp  rocgraph_clients_expect_gt.cpp  rocgraph_clients_expect_hip_error.cpp  rocgraph_clients_expect_hip_success.cpp  rocgraph_clients_expect_indirect_array_eq.cpp  rocgraph_clients_expect_indirect_array_near_tolerance.cpp  rocgraph_clients_expect_le.cpp  rocgraph_clients_expect_lt.cpp  rocgraph_clients_expect_ne.cpp  rocgraph_clients_expect_near_tolerance.cpp  rocgraph_clients_expect_status.cpp  rocgraph_clients_expect_success.cpp  rocgraph_clients_expect_success_error.cpp  rocgraph_clients_matrices_dir.cpp  rocgraph_clients_near_check.cpp  rocgraph_clients_unit_check.cpp  rocgraph_enum.cpp  rocgraph_exporter_ascii.cpp  rocgraph_exporter_ascii.hpp  rocgraph_exporter_matrixmarket.cpp  rocgraph_exporter_matrixmarket.hpp  rocgraph_exporter_rocalution.cpp  rocgraph_exporter_rocalution.hpp  rocgraph_gentest.py  rocgraph_host.cpp  rocgraph_importer_impls.hpp  rocgraph_importer_matrixmarket.cpp  rocgraph_importer_matrixmarket.hpp  rocgraph_importer_mlbsr.cpp  (+20 more)
clients/include/: auto_testing_bad_arg.hpp  auto_testing_bad_arg_get_status.hpp  auto_testing_bad_arg_set_invalid.hpp  display.hpp  flops.hpp  gbyte.hpp  rocgraph.hpp  rocgraph_allocator.hpp  rocgraph_arguments.hpp  rocgraph_check.hpp  rocgraph_clients_are_eq.hpp  rocgraph_clients_are_gt.hpp  rocgraph_clients_are_le.hpp  rocgraph_clients_are_lt.hpp  rocgraph_clients_are_near.hpp  rocgraph_clients_are_near_tolerance.hpp  rocgraph_clients_create_test_graph.hpp  rocgraph_clients_data_type_id_get.hpp  rocgraph_clients_default_tolerance.hpp  rocgraph_clients_envariables.hpp  rocgraph_clients_expect_array_eq.hpp  rocgraph_clients_expect_array_near.hpp  rocgraph_clients_expect_array_near_tolerance.hpp  rocgraph_clients_expect_eq.hpp  rocgraph_clients_expect_false.hpp  rocgraph_clients_expect_gt.hpp  rocgraph_clients_expect_hip_success.hpp  rocgraph_clients_expect_indirect_array_eq.hpp  rocgraph_clients_expect_indirect_array_near_tolerance.hpp  rocgraph_clients_expect_le.hpp  rocgraph_clients_expect_lt.hpp  rocgraph_clients_expect_ne.hpp  rocgraph_clients_expect_near.hpp  rocgraph_clients_expect_near_tolerance.hpp  rocgraph_clients_expect_status.hpp  rocgraph_clients_expect_success.hpp  rocgraph_clients_expect_success_error.hpp  rocgraph_clients_expect_true.hpp  rocgraph_clients_fail.hpp  rocgraph_clients_matrices_dir.hpp  (+84 more)
clients/testings/: CMakeLists.txt  similarity_test.hpp  testing.hpp  testing_rocgraph_balanced_cut_clustering.cpp  testing_rocgraph_betweenness_centrality.cpp  testing_rocgraph_bfs.cpp  testing_rocgraph_core_number.cpp  testing_rocgraph_ecg.cpp  testing_rocgraph_edge_betweenness_centrality.cpp  testing_rocgraph_eigenvector_centrality.cpp  testing_rocgraph_extract_ego.cpp  testing_rocgraph_extract_induced_subgraph.cpp  testing_rocgraph_extract_paths.cpp  testing_rocgraph_generate_rmat_edgelist.cpp  testing_rocgraph_generate_rmat_edgelists.cpp  testing_rocgraph_hits.cpp  testing_rocgraph_jaccard_coefficients.cpp  testing_rocgraph_k_core.cpp  testing_rocgraph_k_truss_subgraph.cpp  testing_rocgraph_katz_centrality.cpp  testing_rocgraph_legacy_ecg.cpp  testing_rocgraph_leiden.cpp  testing_rocgraph_louvain.cpp  testing_rocgraph_node2vec.cpp  testing_rocgraph_node2vec_random_walks.cpp  testing_rocgraph_out_degrees.cpp  testing_rocgraph_overlap_coefficients.cpp  testing_rocgraph_pagerank.cpp  testing_rocgraph_sg_graph_create.cpp  testing_rocgraph_sg_graph_create_from_csr.cpp  testing_rocgraph_sorensen_coefficients.cpp  testing_rocgraph_spectral_modularity_maximization.cpp  testing_rocgraph_sssp.cpp  testing_rocgraph_strongly_connected_components.cpp  testing_rocgraph_triangle_count.cpp  testing_rocgraph_two_hop_neighbors.cpp  testing_rocgraph_uniform_neighbor_sample.cpp  testing_rocgraph_uniform_random_walks.cpp  testing_rocgraph_weakly_connected_components.cpp
clients/tests/: CMakeLists.txt  known_bugs.yaml  rocgraph_test.yaml  rocgraph_test_call.hpp  rocgraph_test_check.hpp  rocgraph_test_config.hpp  rocgraph_test_dispatch.hpp  rocgraph_test_dispatch_enum.hpp  rocgraph_test_enum.hpp  rocgraph_test_functors.hpp  rocgraph_test_main.cpp  rocgraph_test_numeric_types_enum.hpp  rocgraph_test_template.hpp  rocgraph_test_template_traits.hpp  rocgraph_test_traits.hpp  rocgraph_test_utility.hpp  template.yaml  test.hpp  test_rocgraph_balanced_cut_clustering.cpp  test_rocgraph_balanced_cut_clustering.yaml  test_rocgraph_betweenness_centrality.cpp  test_rocgraph_betweenness_centrality.yaml  test_rocgraph_bfs.cpp  test_rocgraph_bfs.yaml  test_rocgraph_core_number.cpp  test_rocgraph_core_number.yaml  test_rocgraph_ecg.cpp  test_rocgraph_ecg.yaml  test_rocgraph_edge_betweenness_centrality.cpp  test_rocgraph_edge_betweenness_centrality.yaml  test_rocgraph_eigenvector_centrality.cpp  test_rocgraph_eigenvector_centrality.yaml  test_rocgraph_extract_ego.cpp  test_rocgraph_extract_ego.yaml  test_rocgraph_extract_induced_subgraph.cpp  test_rocgraph_extract_induced_subgraph.yaml  test_rocgraph_extract_paths.cpp  test_rocgraph_extract_paths.yaml  test_rocgraph_generate_rmat_edgelist.cpp  test_rocgraph_generate_rmat_edgelist.yaml  (+50 more)
cmake/: ClientMatrices.cmake  Dependencies.cmake  Packaging.cmake  Verbose.cmake  get-cli-arguments.cmake  rocgraph_clientmatrices.cmake
docs/: CMakeLists.txt  conf.py  index.rst  modules.dox
docs/doxygen/: Doxyfile
docs/how-to/: basics.rst  contribute.rst  design.rst  logging.rst
(+12 files in other folders)
